--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "engines": {
     "node": "20.x"
   },
-"scripts": {
-  "start": "node server.js",
-  "test": "echo \"Error: no test specified\" && exit 1"
-}
-,
+  "scripts": {
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -25,6 +24,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "gridfs-stream": "^1.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
